<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort_by_date"
        android:title="@string/sort_by_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_name"
        android:title="@string/sort_by_name"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_favorites"
        android:title="@string/favorites"
        app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/action_show_archived"
        android:title="@string/archived"
        app:showAsAction="never"
        android:checkable="true"/>

    <item
        android:id="@+id/action_search_list"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />


</menu>