<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_delete_birthday"
        android:title="@string/delete"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_archive_birthday"
        android:title="@string/archive"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_share_birthday"
        android:title="@string/share"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/action_mark_favorite"
        android:title="@string/favorite"
        app:iconTint="@color/yellow"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_favorite_border"
        android:checkable="true"/>


</menu>