<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ResetPasswordActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:gravity="center"
            style="@style/AppBarText"/>
    </androidx.appcompat.widget.Toolbar>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewResetPassword"
        style="@style/BirthdayCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/major_margin"
        android:padding="@dimen/minor_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarResetPassword">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/minor_margin"
            android:orientation="vertical"
            android:padding="@dimen/minor_margin">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieEye"
                android:layout_width="@dimen/animation_display_width"
                android:layout_height="@dimen/animation_display_width"
                android:layout_marginBottom="@dimen/mini_margin"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/eye" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/major_margin"
                android:gravity="center"
                android:text="@string/reset_password_alert_body"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                />


            <EditText
                android:id="@+id/editTextPasswordReset"
                style="@style/AuthEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minor_margin"
                android:layout_marginEnd="@dimen/minor_margin"
                android:layout_marginBottom="@dimen/minor_margin"
                android:ems="10"
                android:hint="@string/password_caps"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/editTextPassword2Reset"
                style="@style/AuthEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/minor_margin"
                android:layout_marginEnd="@dimen/minor_margin"
                android:layout_marginBottom="@dimen/minor_margin"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/buttonResetPassword"
        style="@style/ButtonStyle"
        android:text="@string/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/major_margin"
        android:layout_marginTop="@dimen/major_margin"
        android:layout_marginEnd="@dimen/major_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewResetPassword" />

    <Button
        android:id="@+id/buttonCancelReset"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/major_margin"
        android:layout_marginEnd="@dimen/major_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonResetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>