<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BirthdayCardView"
    android:layout_marginStart="@dimen/major_margin"
    android:layout_marginEnd="@dimen/major_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/minor_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/change_name_head"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <EditText
            android:id="@+id/et_new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/minor_margin"
            android:layout_marginBottom="@dimen/minor_margin"
            style="@style/AuthEditText"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_name_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/cancel"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_name_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/confirm"/>

        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>